--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 anyhow = "1"
 async-std = { version = "1", features = ["attributes"] }
 git2 = "0.13"
+git-url-parse = "0.3"
 mlmd = "0.1"
 structopt = "0.3"
