--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ anyhow = "1"
 async-std = { version = "1", features = ["attributes"] }
 git2 = "0.13"
 git-url-parse = "0.3"
+hostname = "0.3"
 mlmd = "0.1"
 structopt = "0.3"
