--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "mog"
-version = "0.1.0"
+version = "0.0.0"
 authors = ["Takeru Ohta <phjgt308@gmail.com>"]
 edition = "2018"
+description = "A commad-line tool to log ML experiments"
+homepage = "https://github.com/sile/mog"
+repository = "https://github.com/sile/mog"
+readme = "README.md"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
