--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "mog"
 version = "0.0.0"
 authors = ["Takeru Ohta <phjgt308@gmail.com>"]
 edition = "2018"
-description = "A commad-line tool to log ML experiments"
+description = "A command-line tool to log ML experiments"
 homepage = "https://github.com/sile/mog"
 repository = "https://github.com/sile/mog"
 readme = "README.md"
