Use funty=v1.1.0, as a tentative workaround, to avoid a build failure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ slack-hook2 = "0.10"
 structopt = "0.3"
 tempfile = "3"
 url = "2"
+
+# See: https://github.com/launchbadge/sqlx/issues/1048
+funty = "=1.1.0"
