Use JSON to encode envvars

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ git2 = "0.13"
 git-url-parse = "0.3"
 hostname = "0.3"
 mlmd = "0.1"
+serde_json = "1"
 slack-hook2 = "0.10"
 structopt = "0.3"
 tempfile = "3"
