--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,15 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
-async-std = { version = "1", features = ["attributes", "tokio02"] }
 git2 = "0.13"
 git-url-parse = "0.3"
 hostname = "0.3"
-mlmd = "0.1"
+mlmd = "0.2"
 serde_json = "1"
 slack-hook2 = "0.10"
 structopt = "0.3"
 tempfile = "3"
+tokio = { version = "1", features = ["macros"] }
 url = "2"
 
 # See: https://github.com/launchbadge/sqlx/issues/1048
