--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,10 @@ anyhow = "1"
 git2 = "0.13"
 git-url-parse = "0.3"
 hostname = "0.3"
-mlmd = "0.2"
+mlmd = "0.3"
 serde_json = "1"
 structopt = "0.3"
 tempfile = "3"
 tokio = { version = "1", features = ["macros"] }
 url = "2"
-
-# See: https://github.com/launchbadge/sqlx/issues/1048
-funty = "=1.1.0"
+funty = "2"
