--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
-git2 = "0.13"
+git2 = { version = "0.18", default-features = false }
 git-url-parse = "0.3"
 hostname = "0.3"
 mlmd = "0.3"
