--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1"
 git2 = { version = "0.19", default-features = false }
 git-url-parse = "0.4"
 hostname = "0.4"
@@ -23,3 +22,4 @@ tempfile = "3"
 tokio = { version = "1", features = ["macros"] }
 url = "2"
 funty = "2"
+orfail = "1.1.0"
